@@ -1,5 +1,11 @@
 2011-06-14  Tom Tromey  <tromey@redhat.com>
 
+	* coffread.c (coffread_objfile): Rename from current_objfile.
+	* dbxread.c (dbxread_objfile): Rename from current_objfile.
+	* mdebugread.c (mdebugread_objfile): Rename from current_objfile.
+
+2011-06-14  Tom Tromey  <tromey@redhat.com>
+
 	* jv-lang.c (jv_type_objfile_data_key, dynamics_objfile)
 	(class_symtab): Remove.
 	(jv_dynamics_progspace_key): New global.
